--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <body>
     <h1>Welcome to My Site</h1>
     <ul>
-        <li><a href="POT breakdown.html">Page 1</a></li>
-        <li><a href="All players.html">Page 2</a></li>
-        <li><a href="POT 1.html">Page 3</a></li>
-        <li><a href="POT 2.html">Page 4</a></li>
-        <li><a href="POT 3.html">Page 5</a></li>
-        <li><a href="POT 4.html">Page 5</a></li>
-        <li><a href="POT 5.html">Page 5</a></li>
-        <li><a href="POT 6.html">Page 5</a></li>
+        <li><a href="POT-breakdown.html">Page 1</a></li>
+        <li><a href="All-players.html">Page 2</a></li>
+        <li><a href="POT1.html">Page 3</a></li>
+        <li><a href="POT2.html">Page 4</a></li>
+        <li><a href="POT3.html">Page 5</a></li>
+        <li><a href="POT4.html">Page 5</a></li>
+        <li><a href="POT5.html">Page 5</a></li>
+        <li><a href="POT6.html">Page 5</a></li>
     </ul>
 </body>
 </html>
