--- a/index.html
+++ b/index.html
@@ -2,19 +2,68 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My GitHub Pages Site</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 800px;
+            margin: 50px auto;
+            padding: 20px;
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            color: #333;
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin: 10px 0;
+        }
+        a {
+            text-decoration: none;
+            color: #1e90ff;
+            font-size: 18px;
+        }
+        a:hover {
+            color: #ff6347;
+        }
+        footer {
+            text-align: center;
+            margin-top: 40px;
+            font-size: 14px;
+            color: #666;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My Site</h1>
-    <ul>
-        <li><a href="POT-breakdown.html">Page 1</a></li>
-        <li><a href="All-players.html">Page 2</a></li>
-        <li><a href="POT1.html">Page 3</a></li>
-        <li><a href="POT2.html">Page 4</a></li>
-        <li><a href="POT3.html">Page 5</a></li>
-        <li><a href="POT4.html">Page 5</a></li>
-        <li><a href="POT5.html">Page 5</a></li>
-        <li><a href="POT6.html">Page 5</a></li>
-    </ul>
+    <div class="container">
+        <h1>Welcome to My Site</h1>
+        <ul>
+	    <li><a href="POT-breakdown.html">POT Breakdown</a></li>
+            <li><a href="All-players.html">All Players List</a></li>
+            <li><a href="POT1.html">POT 1 List</a></li>
+            <li><a href="POT2.html">POT 2 List</a></li>
+            <li><a href="POT3.html">POT 3 List</a></li>
+            <li><a href="POT4.html">POT 4 List</a></li>
+            <li><a href="POT5.html">POT 5 List</a></li>
+            <li><a href="POT6.html">POT 6 List</a></li>
+        </ul>
+    </div>
+    <footer>
+        &copy; 2024 My GitHub Pages Site
+    </footer>
 </body>
 </html>
+
