--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
             <li><a href="POT4.html">POT 4 List</a></li>
             <li><a href="POT5.html">POT 5 List</a></li>
             <li><a href="POT6.html">POT 6 List</a></li>
+            <li><a href="POT6.html">JS Team</a></li>
+            <li><a href="POT6.html">AJ Team</a></li>
+            <li><a href="POT6.html">AS Team</a></li>
+            <li><a href="POT6.html">JM Team</a></li>
+            <li><a href="POT6.html">KM Team</a></li>
+            <li><a href="POT6.html">VA Team </a></li>
         </ul>
     </div>
     <footer>
