--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to My Site</h1>
+        <h1>FPL Draft 2024</h1>
         <ul>
 	    <li><a href="POT-breakdown.html">POT Breakdown</a></li>
             <li><a href="All-players.html">All Players List</a></li>
