--- a/index.html
+++ b/index.html
@@ -52,19 +52,14 @@
         <h1>FPL Draft 2024</h1>
         <ul>
 	    <li><a href="POT-breakdown.html">POT Breakdown</a></li>
-            <li><a href="All-players.html">All Players List</a></li>
+            <li><a href="all-players.html">All Players List</a></li>
             <li><a href="POT1.html">POT 1 List</a></li>
             <li><a href="POT2.html">POT 2 List</a></li>
             <li><a href="POT3.html">POT 3 List</a></li>
             <li><a href="POT4.html">POT 4 List</a></li>
             <li><a href="POT5.html">POT 5 List</a></li>
             <li><a href="POT6.html">POT 6 List</a></li>
-            <li><a href="POT6.html">JS Team</a></li>
-            <li><a href="POT6.html">AJ Team</a></li>
-            <li><a href="POT6.html">AS Team</a></li>
-            <li><a href="POT6.html">JM Team</a></li>
-            <li><a href="POT6.html">KM Team</a></li>
-            <li><a href="POT6.html">VA Team </a></li>
+            <li><a href="VA.html">Individual Team sheet</a></li>
         </ul>
     </div>
     <footer>
