--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <div class="container">
         <h1>FPL Draft 2024</h1>
         <ul>
-	    <li><a href="POT-breakdown.html">POT Breakdown</a></li>
-            <li><a href="all-players.html">All Players List</a></li>
+	        <li><a href="POT-breakdown.html">POT Breakdown</a></li>
+            <li><a href="all-players-list.html">All Players List</a></li>
             <li><a href="POT1.html">POT 1 List</a></li>
             <li><a href="POT2.html">POT 2 List</a></li>
             <li><a href="POT3.html">POT 3 List</a></li>
