adding dynamic weboage

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <li><a href="POT5.html">POT 5 List</a></li>
             <li><a href="POT6.html">POT 6 List</a></li>
             <li><a href="VA.html">Individual Team sheet</a></li>
+            <li><a href="player-bid.html">FPL Draft tracker</a></li>
         </ul>
     </div>
     <footer>
