--- a/player-bid.html
+++ b/player-bid.html
@@ -18,12 +18,12 @@
             text-align: center;
             color: #38003c; /* Changed color for the title */
             margin: 20px 0;
-            font-size: 40px;
+            font-size: 2.5rem; /* Responsive font size */
             font-weight: 700;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
         }
         .container {
-            max-width: 900px;
+            max-width: 90%;
             margin: auto;
             padding: 20px;
             background: rgba(255, 255, 255, 0.9); /* Slightly transparent white */
@@ -36,24 +36,23 @@
             border-bottom: 3px solid #3498db;
             padding-bottom: 10px;
             margin-bottom: 20px;
-            font-size: 28px;
+            font-size: 1.75rem; /* Responsive font size */
             font-weight: 500;
         }
         .form-row {
             display: flex;
-            flex-wrap: wrap;
+            flex-direction: column;
             gap: 10px;
             margin-bottom: 20px;
         }
         .form-row > div {
             flex: 1;
-            min-width: 150px;
         }
         .form-row label {
             display: block;
             margin-bottom: 5px;
             color: #2c3e50;
-            font-size: 14px;
+            font-size: 0.875rem; /* Responsive font size */
         }
         input, select {
             padding: 10px;
@@ -61,7 +60,7 @@
             border: 1px solid #bdc3c7;
             width: 100%;
             box-sizing: border-box;
-            font-size: 14px;
+            font-size: 0.875rem; /* Responsive font size */
         }
         .manager-select, .position-select {
             height: 38px;
@@ -84,7 +83,7 @@
             padding: 14px;
             border: 1px solid #e0e0e0;
             text-align: center;
-            font-size: 16px;
+            font-size: 1rem; /* Responsive font size */
             color: #2c3e50;
         }
         th {
@@ -101,7 +100,7 @@
             border: none;
             color: #ffffff;
             cursor: pointer;
-            font-size: 14px;
+            font-size: 0.875rem; /* Responsive font size */
             margin: 5px;
             transition: background-color 0.3s ease, transform 0.2s ease;
         }
@@ -156,7 +155,6 @@
                 padding: 10px 15px; /* Adjusted padding for very small screens */
             }
         }
-
     </style>
 </head>
 <body>
