--- a/player-bid.html
+++ b/player-bid.html
@@ -78,6 +78,7 @@
             border-radius: 8px;
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            table-layout: fixed; /* Ensure consistent column widths */
         }
         th, td {
             padding: 14px;
@@ -85,6 +86,7 @@
             text-align: center;
             font-size: 1rem; /* Responsive font size */
             color: #2c3e50;
+            word-wrap: break-word; /* Allow text to wrap */
         }
         th {
             background-color: #3498db;
@@ -155,6 +157,12 @@
                 padding: 10px 15px; /* Adjusted padding for very small screens */
             }
         }
+
+        /* Horizontal scroll for table on small screens */
+        .table-container {
+            overflow-x: auto;
+            -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
+        }
     </style>
 </head>
 <body>
@@ -196,21 +204,23 @@
             </div>
         </div>
 
-        <table id="playerTable">
-            <thead>
-                <tr>
-                    <th>No</th>
-                    <th>Player Name</th>
-                    <th>Position</th>
-                    <th>Manager</th>
-                    <th>Bid Value</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Player rows will be added here -->
-            </tbody>
-        </table>
+        <div class="table-container">
+            <table id="playerTable">
+                <thead>
+                    <tr>
+                        <th>No</th>
+                        <th>Player Name</th>
+                        <th>Position</th>
+                        <th>Manager</th>
+                        <th>Bid Value</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Player rows will be added here -->
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <script type="module">
