--- a/index.html
+++ b/index.html
@@ -98,6 +98,14 @@
             <li><a href="POT6.html">POT 6 List</a></li>
             <li><a href="VA.html">Individual Team sheet</a></li>
             <li><a href="player-bid.html">FPL Draft tracker</a></li>
+
+            <li><a href="team-sheet-aj.html">Team AJ</a></li>
+            <li><a href="team-sheet-as.html">Team AS</a></li>
+            <li><a href="team-sheet-jm.html">Team JS</a></li>
+            <li><a href="team-sheet-js.html">Team KM</a></li>
+            <li><a href="team-sheet-km.html">Team JM</a></li>
+            <li><a href="team-sheet-va.html">Team VA</a></li>
+            
         </ul>
     </div>
     <footer>
